--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -24,7 +24,7 @@ Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen,
 Die soziale Gewalt wird vom \textcite{Def_Form_Folge_Gewalt} als Bestandteil der psychischen Gewalt angesehen. Auch sie ist körperlich nicht erkennbar. Es erfolgt eine soziale Abkoppelung des Opfers von dessen Umfeld. Der Kontakt zu Freunden oder Familien wird untersagt und auch das Treffen bekannter Personen ist sowohl außerhalb wie auch innerhalb des eigenen Zuhauses untersagt. In manchen Fällen sozialer Gewalt, werden die Telefonate durch den Täter mitgehört. Opfer haben oft nicht die Möglichkeit alleine das Haus zu verlassen. Sie werden von ihrem Partner zur und von der Arbeit gebracht \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Manche Opfer distanzieren sich, aufgrund der psychischen Belastungen, selbst von ihrem sozialen Umfeld. Durch den mangelden sozialen Kontakt ist die Hilfeleistung durch das Umfeld kaum, wenn nicht garnicht möglich \parencite{Def_haus_Gewalt_2}.
 
 % ökonomische Gewalt
-Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der fehlerhaften bzw. nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben, anhören, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen untersagt einem Beruf nachzugehen, oder sie müssen die Erwerbe an den Partner abgeben, so dass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}. Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
+Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der fehlerhaften beziehungsweise nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben, anhören, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen untersagt einem Beruf nachzugehen, oder sie müssen die Erwerbe an den Partner abgeben, so dass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}. Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
 
 %In Anlehung and das \textit{Rad der Gewalt} von \textcite{Rad_der_Gewalt} sind %in Anhang A in Abbildung~\ref{Rad der Gewalt} die fünf Gewaltarten nochmal %zusammenfassend bildlich dargestellt. %how to reference Anhang?
 
@@ -37,7 +37,7 @@ Eine Instanz höher, auf der \textit{Beziehungsebene}, beschäftigt sich die For
 
 Die \textit{Gemeinschaftsebene} beinhaltet das soziale und räumliche Umfeld, wie Verwandte, Freunde, Nachbarn, oder der Arbeitsplatz und Vereine. Durch die Forschung werden Aspekte wie die soziale Isolation oder ein gewalttolerierendes und unterstützendes Mileau betrachtet \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die Nachbarschaft hat auch mit ihrer Rate an nicht Erwerbstätigen und durch mögliche Drogengeschäfte einen großen Einfluss auf das Verhalten der Beziehungspartner \parencite{Ursache_hG, Gewaltart}.
 
-Auf der höchsten Ebene liegt die \textit{Gesellschaft}. Durch ihre sozialen und kulturellen Normen schafft sie ein gewaltförderndes oder -hinterndes Umfeld \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die positive bzw. negative Auffassung von Gewalt in der Gesellschaft generell, aber vor allem in der Politik, im Justizsystem und in den Medien beeinflusst das menschliche Verhalten \parencite{Ursache_hG_2, Ursache_hG}.  
+Auf der höchsten Ebene liegt die \textit{Gesellschaft}. Durch ihre sozialen und kulturellen Normen schafft sie ein gewaltförderndes oder -hinterndes Umfeld \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die positive beziehungsweise negative Auffassung von Gewalt in der Gesellschaft generell, aber vor allem in der Politik, im Justizsystem und in den Medien beeinflusst das menschliche Verhalten \parencite{Ursache_hG_2, Ursache_hG}.  
 
 Da die eben beschriebenen Einflüsse auf die Entstehung von häuslicher Gewalt mit dem Beginn dieser sich nicht plötzlich ändern und entfallen, entwickelt sich die häusliche Gewalt häufig zu einem immer wiederkehrenden Kreislauf. Dieser beinhaltet die folgenden drei zusammenhängenden Zyklen: 
 
