--- a/2 Theorie/2.2.1 Hypothese 1.tex
+++ b/2 Theorie/2.2.1 Hypothese 1.tex
@@ -3,7 +3,7 @@ In einer Studie mit $N$~=~1177 Universitätsstudenten, hypothetisiertern \textci
 
 Die in 2012 durchgeführt Studie von Kassim untersuchte unter anderem die Korrelation zwischen victim blaming und dem Anteil an aggressivem Verhalten bei malaysischen Jugendlichen. Sie kam mit einem $r$~=~.29 auf ein hoch signifikantes Ergebnis ($p$~=~.01) \parencite{H1_malasia_2012}. In ihrer theoretischen Aufarbeitung ihrer untersuchten Konstrukte eklärte Kassim, dass das Erleben von häuslicher Gewalt zur Akzeptanz von Gewaltmythen führt. Sie kam zur Erkenntnis, dass nicht nur die Schuldzuweiseung auf das Opfer, aber auch das Erleben von häuslicher Gewalt aggressives Verhalten aufklären \parencite{H1_malasia_2012}.
 
-\textcite{H1_moderation_2020} untersuchten in ihrer Studie Aggression, häusliche Gewalt und Toleranz bei pakistanischen arbeitstätigen und verheirateten Frauen. Häusliche Gewalt wurde, wie in dieser Studie mithilfe des DVMAS untersucht. \textcite{H1_moderation_2020} testeten zudem auch die Korrelation der victim blaming behandelnden DVMAS$-$Subskalen mit Aggression. Konträr zu \textcite{H1_malasia_2012} kamen sie jedoch zu den Ergebnissen, dass Aggression und ihr Subskalen nicht mit victim blaming, im Sinne der Opferbeschuldigung aufgrund des Charakters und des Verhaltens und die Entschuldigung der Täter, korreliert ($r$~=~.04, $r$~=~.13, $r$~=~.11). Im Umfang einer Moderationsanalyse dieser Variablen mit einer Subskala der Toleranz kamen \textcite{H1_moderation_2020} zu dem signifikanten Ergebnis, dass die Interaktion zwischen dieser Subskala und der Opferbeschuldigung aufgrund des Charakters Aggression negativ vorhersagen ($\beta$~=~$-$.225, $p<$ .01). Toreranz scheint das Ausmaß des victim blaming bei gegebener Aggression zu mindern.
+\textcite{H1_moderation_2020} untersuchten in ihrer Studie Aggression, häusliche Gewalt und Toleranz bei pakistanischen arbeitstätigen und verheirateten Frauen. Häusliche Gewalt wurde, wie in dieser Studie mithilfe des DVMAS untersucht. \textcite{H1_moderation_2020} testeten zudem auch die Korrelation der victim blaming behandelnden DVMAS$-$Subskalen mit Aggression. Konträr zu \textcite{H1_malasia_2012} kamen sie jedoch zu den Ergebnissen, dass Aggression und ihre Subskalen nicht mit victim blaming, im Sinne der Opferbeschuldigung aufgrund des Charakters und des Verhaltens und die Entschuldigung der Täter, korreliert ($r$~=~.04, $r$~=~.13, $r$~=~.11). Im Umfang einer Moderationsanalyse dieser Variablen mit einer Subskala der Toleranz kamen \textcite{H1_moderation_2020} zu dem signifikanten Ergebnis, dass die Interaktion zwischen dieser Subskala und der Opferbeschuldigung aufgrund des Charakters Aggression negativ vorhersagen (\textbeta~=~$-$.225, $p<$ .01). Toreranz scheint das Ausmaß des victim blaming bei gegebener Aggression zu mindern.
 
 Die Studien von \textcite{H1_malasia_2012, H1_moderation_2020} beziehen sich auf den nahöstlichen und asiatischen Raum. Demzufolge können sich die Ergebnisse aus diesen Studien von der diesigen abwichen. Des Weiteren bilden bei der Studie von \textcite{H1_malasia_2012} Jugendliche die Stichprobe. In der vorliegenden Studie werden ausschließlich Probanden, die die Volljährigkeit erreicht haben, herangezogen. Nichts desto trotz wurde diese Studie als Beispiel des aktuellen Forschungsstandes berücksichtig. Durch die Reifung des präfrontalen Kortex nimmt während des Jugendalters die Intelligenz und das logische Denken zu. Auch die Frage der eigenen Identität steht in dessen späteren Jahren im Vordergrund \parencite{H1_Entwicklung}. In diesen Jahren formen sich große Teile des späteren Selbst und die hier erhobene Stichprobe zeigt ihre größte Anhäufung an Probanden bei einem Alter von 21 Jahren (vgl. Abbildung~\ref{Histogramm Altersverteilung}). Durch diese Prozimität an das Jugendalter wird die Studie von \textcite{H1_malasia_2012} dennoch berücksichtig.
 
