--- a/2 Theorie/2.2.2 Hypothese 2.tex
+++ b/2 Theorie/2.2.2 Hypothese 2.tex
@@ -1,8 +1,13 @@
 \subsection{Hypothese 2}    \label{subsec_2.2.2}
-Die Studie von \textcite{H2_u_3_Bhogal_2016} zeigt, dass körperliche Aggression einen signifikanten Einfluss auf die Akzeptanz von Vergewaltigungsmythen hat. Diese Studie wird untersuchen, ob Aggression im Allgemeinen auch ein gültiger Prädiktor für die Akzeptanz von Gewaltmythen im Allgemeinen ist.
+Bislang gibt es wenig Studien, die die Relation von Aggression und der Akzeptanz von Gewaltmythen untersucht. Es lässt sich jedoch vermuten, dass sie zusammenhängen, zumal der DVMAS mit patriachalen und sexistischen Einstellungen verbunden ist. Glaubende dieser Sichtweisen scheuen von der Anwendung von aggressiven Handlungen und Gewalt zur Behebung von Konflikten nicht zurück \textcite{DVMAS_Peters}. Obwohl Gewalt nicht gleichzusetzen ist mit Aggression, ist es auch nicht möglich zu sagen, dass diese beiden Begriffe nicht mit einander in Verbindung stehen.
 
-Bei der Untersuchung der möglichen moderierenden Rolle der Toleranz$-$Subskala Neuheit zwischen häuslicher Gewalt und Aggression kamen \textcite{H1_moderation_2020} zur Erkenntnis, dass die Akzeptanz von Gewaltmythen ein signifikanter Prediktor von Aggression ist ($\beta$~=~.734, $p<$ .01).
+Erst in jüngeren Jahren scheint die Fragestellung, ob und inwiefern Aggression und die Akzeptanz von Gewaltmythen, und im Rahmen dieser Arbeit in Bezug auf häusliche Gewalt, korrelieren, an Interesse gewonnen zu haben. wie die Anschließend dargebotenen Studien demonstrieren.
 
-Aufgrund von QUELLEN wird folgende Hypothese abgeleitet: Die Aggression korreliert positiv mit der Akzeptanz von Gewaltmythen.
+Die Studie von \textcite{H2_u_3_Bhogal_2016} mit $N$~=~121 Probanden untersuchte ob physische und verbale Aggression wie auch Ärger und Misstrauen die Akzeptanz von Vergewaltigungsmythen vorhersagen können. Die Ergebnisse zeigten, dass physische Aggression die Akzeptanz signifikant vorhersagte.
+
+In einer Studie mit 100 verheirateten und arbeitstätigen Frauen untersuchten \textcite{H1_moderation_2020} unter anderem eine mögliche moderierenden Rolle der Toleranz$-$Subskala Neuheit zwischen häuslicher Gewalt und Aggression. Sie kamen zu der Erkenntnis, dass die Akzeptanz von Gewaltmythen ein signifikanter Prediktor von Aggression ist (\textbeta~=~.734, $p<$ .01).
+
+Aufgrund des theoretischen Hintergrundes von \textcite{DVMAS_Peters} und den Ergebnissen der Studien von \textcite{H1_moderation_2020, H2_u_3_Bhogal_2016} bildet sich der Gedanke, dass Aggression und die Akzeptanz Gewaltmythen häuslicher Gewalt positiv korrelieren. Daraus ergibt sich folgende gerichtete Zusammenhangshypothese: Der Aggressionsscore korreliert positiv mit der Akzeptanz von Gewaltmythen
+
 
 % Durch die in Kapitel 1.4 jeweiligen Studien von Haj-Yahia (2003), McElligott (2011), George und Martínez (2002) und Acosved und Long (2006) liegt der Gedanken nahe, dass der kulturelle Hintergrund der Betroffenen Auswirkungen auf die Wahrnehmung und daraus resultierende Verantwortungszuschreibung der Gesellschaft hat. Daraus ergibt sich die gerichtete Unterschiedshypothese:
