--- a/2 Theorie/2.2.3 Hypothese 3.tex
+++ b/2 Theorie/2.2.3 Hypothese 3.tex
@@ -1,7 +1,7 @@
 \subsection{Hypothese 3}    \label{subsec_2.2.3}
 \textcite{H2_u_3_Bhogal_2016} untersuchten in ihrer Studie 121 Studierende auf ihre Akzeptanz von Vergewaltigungsmythen und ihre Aggression in Form von physischer und verbaler Aggression, Ärger und Misstrauen. Sie kamen zum Entschluss, dass Männer eine höhere Akzeptanz von Vergewaltigungsmythen haben. Diese Mythen stellen die, meist weiblichen, als Mitschuldie da. Diese sichtweise des Opfers ist im Einklang mit den Mythen von häuslicher Gewalt. Ein weiteres Ergebnis der Untersuchung von \textcite{H2_u_3_Bhogal_2016} war, dass die physische Aggression bei Männern signifikant höher ist, verglichen mit den Frauen.
 
-Laut \textcite{H3_MFUnterschied} sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen Fähigkeiten bzw. nicht das gleiche Bedürfniss haben, zu reagieren, so wie Männer es haben. Eine weitere Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert. Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als Weibchen. Obwohl Artenübergreifende Vergleiche mit Obhut zu genießen sind, bietet diese Tatsache einen starken Anhaltspunkt für einen Geschlechterunterschied menschlicher Aggressivität.
+Laut \textcite{H3_MFUnterschied} sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen Fähigkeiten beziehungsweise. nicht das gleiche Bedürfniss haben, zu reagieren, so wie Männer es haben. Eine weitere Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert. Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als Weibchen. Obwohl Artenübergreifende Vergleiche mit Obhut zu genießen sind, bietet diese Tatsache einen starken Anhaltspunkt für einen Geschlechterunterschied menschlicher Aggressivität.
 
 Im Rahmen einer Studie von $N$~=~329 Probanden zwischen 15 und 19 Jahren untersuchten \textcite{H3_2020} die Existenz sexualisierter Gewalt in romantischen Beziehungen, mögliche Zusammenhänge zwischen Mythen über sexualisierte Aggression und sexualisiertes Durchsetzungsvermögen und ihre möglichen geschlechterspezifischen Unterschiede. Ihre Ergebnisse zeigen, dass die männlichen Jugendlichen häufiger Täter sexualisierter Gewalt waren, und dass die männlichen Probanden vermehrt Mythen über sexualisierte Aggression Glauben schenkten. Das behandelte Thema des verwendeten Fragebogens ähnelt denen des DVMAS.
 
