--- a/4 Ergebnisse/Kreuztabelle.tex
+++ b/4 Ergebnisse/Kreuztabelle.tex
@@ -17,7 +17,7 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N_{neu} \) = 864. SES = soziökonomischer Status. Prüffragen: (Gewaltart) Ging es um sexualisierte Gewalt? (Geschlecht) War das Opfer eine Frau? (SES) War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters? (Kultur) Hatten die Personen deutsche Namen?
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864. SES = soziökonomischer Status. Prüffragen: (Gewaltart) Ging es um sexualisierte Gewalt? (Geschlecht) War das Opfer eine Frau? (SES) War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters? (Kultur) Hatten die Personen deutsche Namen?
       \end{tablenotes}
     \end{table}
 
