--- a/4 Ergebnisse/Tabelle Explorativ AggroSub.tex
+++ b/4 Ergebnisse/Tabelle Explorativ AggroSub.tex
@@ -16,7 +16,7 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864; deutscher DVMAS = Akzeptanz der Gewaltmythen; Aggression-Subskalen von 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); deutscher DVMAS von 1 (\textit{Verantwortungszuschreibung gegenüber des Täters}) bis 101 (\textit{Verantwortungszuschreibung gegenüber des Opfers}); Pearson$-$Produkt$-$Moment$-$Korrelation. *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; deutscher DVMAS = Akzeptanz der Gewaltmythen; Aggression-Subskalen von 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); deutscher DVMAS von 1 (\textit{Verantwortungszuschreibung gegenüber des Täters}) bis 101 (\textit{Verantwortungszuschreibung gegenüber des Opfers}); Pearson$-$Produkt$-$Moment$-$Korrelation. *$p<$~.001
       \end{tablenotes}
     \end{table}
 
