--- a/4 Ergebnisse/Tabelle Explorativ Korrelation AggroFB.tex
+++ b/4 Ergebnisse/Tabelle Explorativ Korrelation AggroFB.tex
@@ -15,7 +15,7 @@
   \end{adjustbox}
   
   \begin{tablenotes}
-      \item \textit{Anmerkungen.} \( N \) = 864; Wertebereich der Variablen Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Pearson$-$Produkt$-$Moment$-$Korrelation. \\ *$p<$~.001
+      \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; Wertebereich der Variablen Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Pearson$-$Produkt$-$Moment$-$Korrelation. \\ *$p<$~.001
     \end{tablenotes}
   \end{table}
 
