--- a/4 Ergebnisse/Tabelle H2 Pearson.tex
+++ b/4 Ergebnisse/Tabelle H2 Pearson.tex
@@ -8,14 +8,14 @@
       \hline
         & $M$   & $SD$ & 1 \\
       \hline
-    Aggression      & 1.88 & 0.43  & $-$      \\
-    DVMAS           & 2.60 & 0.80  & .38*      \\
+    1 Aggression      & 1.88 & 0.43  & $-$      \\
+    2 DVMAS           & 2.60 & 0.80  & .38*      \\
        \hline
     \end{tabular}
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864; DVMAS = Akzeptanz der Gewaltmythen; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}) Variable DVMAS 1 (Verantwortungszuschreibung gegenüber des Täters) bis 101 (Verantwortungszuschreibung gegenüber des Opfers); Pearson$-$Produkt$-$Moment$-$Korrelation. \\ *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; DVMAS = Akzeptanz der Gewaltmythen; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}) Variable DVMAS 1 (Verantwortungszuschreibung gegenüber des Täters) bis 101 (Verantwortungszuschreibung gegenüber des Opfers); Pearson$-$Produkt$-$Moment$-$Korrelation. \\ *$p<$~.001
       \end{tablenotes}
     \end{table}
 
