--- a/4 Ergebnisse/Tabelle Haupteffekte.tex
+++ b/4 Ergebnisse/Tabelle Haupteffekte.tex
@@ -8,14 +8,14 @@
       \hline
                & $B$    & $SE(B)$ & \textbeta  & $t$    & $p$ \\
       \hline
-    Geschecht  & $-$.23 & 0.06    & $-$.13   & 4.191  & $<$~.001 \\
-    Aggression & .69    & 0.06    & .37      & 11.842 & $<$~.001 \\
+    Geschlecht  & $-$.23 & 0.06    & $-$.13   & $-$4.19  & $<$~.001 \\
+    Aggression  & .69    & 0.06    & .37      & 11.84    & $<$~.001 \\
        \hline
     \end{tabular}
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864%; *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864%; *$p<$~.001
       \end{tablenotes}
     \end{table}
 
