--- a/4 Ergebnisse/Tabelle KT SES.tex
+++ b/4 Ergebnisse/Tabelle KT SES.tex
@@ -17,6 +17,6 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864. SES = soziökonomischer Status. Prüffrage: War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters?
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864. SES = soziökonomischer Status. Prüffrage: War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters?
       \end{tablenotes}
     \end{table}
