--- a/4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex
+++ b/4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex
@@ -17,7 +17,7 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864. Prüffrage: War das Opfer eine Frau?
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864. Prüffrage: War das Opfer eine Frau?
       \end{tablenotes}
     \end{table}
 
