--- a/4 Ergebnisse/Tabelle Manipulationscheck.tex
+++ b/4 Ergebnisse/Tabelle Manipulationscheck.tex
@@ -17,6 +17,6 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864. Prüffrage: Ging es um sexualisierte Gewalt?
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864. Prüffrage: Ging es um sexualisierte Gewalt?
       \end{tablenotes}
     \end{table}
