--- a/4 Ergebnisse/Tabelle Moderation.tex
+++ b/4 Ergebnisse/Tabelle Moderation.tex
@@ -4,18 +4,23 @@
     \centering
     \begin{adjustbox}{width=11cm} %{width=\textwidth}
     \small
-    \begin{tabular}{lrrrrrr}
+    \begin{tabular}{lrrrrr}
       \hline
-        & $F$(HC3) & $df1$ & $df2$ & $p$ & $R^{2}$ & $\Delta R^{2}$ \\
+      & $B$    & $SE(B)$  & $t$    & $p$ & $\Delta R^{2}$\\
       \hline
-    Gesamtmodell & 50.30  & 1 & 856 & $<$~.001 & .1634 &       \\
-    Moderation   & 0.76   & 1 & 856 & .384     &       & .0008 \\
+    Konstante  & 2.59    & 0.03 & 103.13  & $<$~.001 & \\
+    Aggression & 0.68    & 0.06 & 11.13   & $<$~.001 & \\
+    Geschlecht & $-$0.24 & 0.05 & $-$4.32 & $<$~.001 & \\
+    Interaktionsterm & $-$0.14 & 0.13 & $-$1.06 & .290 & .001 \\
+    $R^{2}$          &         &      &         &      & .163* \\
        \hline
     \end{tabular}
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864%; *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; *$p<$~.001
       \end{tablenotes}
     \end{table}
+
+
 
