--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -3,7 +3,28 @@ Der abschließende Diskussionskapitel beginnt mit einer Zusammenfassung der zent
 
 
 \section{Zusammenfassung der zentralen Ergebnisse}  \label{sec_5.1}
-Ergebnisse und ihre Implikation für die Gültigkeit der empirischen Hypothesen zusammengefasst
+Diese Bachelorarbeit befasst sich maßgeblich mit den Themen häusliche Gewalt, Gewaltmythen und deren Zusammenhang mit der Aggressivität der Probanden. Im laufe dieses Kapitels werden die Ergebnisse von den zuvor aufgestellten Hypothesen zusammgefasst, sowie die Ergebnisse der Post$-$hoc Analysen.
+
+An dem online erhobenen Fragebogen nahmen hauptsächlich junge Personen teil und mehr als die Hälfte der $N$~=~432 großen Stichprobe waren Frauen. 
+Die Ergebnisse der Manipulationschecks zeigen, dass mehr als 80\% der Probanden die Vignetten richtig gelesen haben und diese auch verstanden haben. Auffalend war die hohe Rate an richtigen Antworten bei der Nachfrage des Geschlecht des Opfers wie den kulturellen Hintergrund.
+
+
+% H1: Der Aggressionsscore korreliert mit victim blaming.
+Die H1 diente der Überprüfung einer möglichen Korrelation zwischen der Aggression und der Verantwortungszuschreibung auf das Opfer. Obwohl die Verteilung der Variable der Verantwortungszuschreibung nicht einer Normalverteilung entspricht, kann sie wegen der, mit $N_{neu}$~=~864, großen Stichprobe und des zentralen Grenzwertsatzes als metrisch eingestuft werden. 
+Bei der Testung der Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation kam eine nicht bivariate Normalverteilung heraus. Aus diesem Grund wurde auf die Spearman$-$Rang$-$Korrelation ausgewichen. Für diesen Test waren alle Voraussetzungen erfüllt. Die Spearman$-$Korrelation ergibt ein nicht signifikantes Ergebnis und auch der vorhandene Effekt ist gering. demzufolge wird die Nullhypothese angenommen und die Aggression der Probanden korreliert nur bedingt und nicht signifikant mit der Verantwortungszuschreibung auf das Opfer.
+
+% H2: Der Aggressionsscore korreliert mit victim blaming.
+Eine positive Korrelation zwischen Aggression und der Akzeptanz von Mythen häuslicher Gewalt ist der Bestandteil der H2. Für dessen Überprüfung waren die Voraussetzungen der Pearson$-$Produkt$-$Moment$-$Korrelation alle gegeben und konnte somit gerechnet werden. Die Testung kam zu einem signifikanten Ergebnis und einem mittelgroßen Effekt. Die Nullhypothese mit demzufolge verworfen werden und die Alternativhypothese angenommen werden. Die Aggression und die Akzeptanz der Gewaltmythen weisen eine mittelsrarke Korrelation auf.
+
+% H3: Der Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression wird durch das Geschlecht moderiert.
+Von einer moderierenden Rolle des biologischen Geschlechts des Probanden auf den Zusammenhang zwischen der Akzeptanz von Mythen häuslichen Gewalt und Aggression, wurde bei der H3 ausgegangen. Bei der Überprüfung der Voraussetzungen kam der White-Test zu einem signifikanten Ergebnis, was für eine Homoskedastizität spricht. Die weiteren Voraussetzungen waren gegeben. Das Gesamtmodell der Moderation war signifikant, jedoch zeigte die Interaktion der drei Variablen ein nicht signifikantes Ergebnis. Die Nullhypothese muss demzufolge angenommen werden. Das Geschlecht hat keine moderierende Auswirkung auf den Zusammenhang von Aggression und der Akzeptanz der Gewaltmythen. Des Weiteren wurde überprüft, ob die beiden Prädiktoren Einfluss auf das Kriterium haben. Die Regressionsanalyse zeigt für das Geschlecht und die Aggression ein signifikantes Ergebnis. Beide Variablen beeinflussen demzufolge die Akzeptanz der Mythen häuslicher Gewalt.
+
+% explorative Ergebnisse
+Die ersten beiden Post$-$hoc Analysen dienten der weiteren Untersuchung der Korrelation von Aggression und der Akzeptanz der Mythen häuslicher Gewalt. Die erste Analyse erforschte die Korrelation zwischen den Aggression$-$Subskalen verbale Aggression, Ärger und Misstrauen untereinander und jeweils mit dem DVMAS. Sie kam mit erfüllten Voraussetzungen zu signifikanten Ergebnissen. Die drei Subskalen korrelieren mit einem mittelgroßen Effekt untereinander und mit einem schwachen Effekt mit dem DVMAS. Die vierte Subskala, physische Aggression, musste aufgrund zu großer Ausreißer von den Berechnungen entzogen werden.
+
+Die zweite explorative Anaylse untersuchte den Einfluss des biologischen Geschlechts auf die Akzeptanz der Mythen häuslicher Gewalt. Da der Test alle Voraussetzungen erfüllte konnte er durchgeführt werden und somit kann anschließend das Ergebnis zur Interpreation herangezogen werden. Der t$-$Test für unabhängige Stichproben zeigt ein signifikantes Ergebnis. Männer akzeptieren Mythen häuslicher Gewalt mehr als Frauen.
+
+Zusätzlich zu den weiterführenden Analysen von Aggression und DVMAS wurde auch eine Zusammenhangsanalyse der Aggression$-$Subskalen mit der Verantwortungszuschreibung auf das Opfer unternommen. Aufgrund der Ausreißer der physischen Aggression Subskala wurde eine Spearman$-$Rang$-$Korrelation gerechnet. Es zeigt sich, dass ausschließlich die physische Aggression mit der Verantwortungszuschreibung korreliert.
 
 
 \section{Einordnung und Diskussion der Befunde}     \label{sec_5.2}
@@ -11,11 +32,26 @@ Ergebnisse und ihre Implikation für die Gültigkeit der empirischen Hypothesen 
 %Auch die explorative Untersuchung der Differenz zwischen den biologischen Geschlechtern in Anbetracht der Aggression, wurde mithilfe des t-Tests für unabhängige Stichproben getestet. Der Levene Test fiel mit $F$~5.715 signifikant aus. Das bedeutet, dass durch die Varianzunterschiede es zu falsche Schlüsse aus dem t-Test kommen kann.
 %Der Unterschied zwischen Männern und Frauen war signifikant ($t$(433.64)~=~2.18, $p$~=~.0.30). Die Aggression war bei Männern durchschnittlich 0.07 Einhaeiten niedriger (95\%$-$CI[0.01, 0.14]).
 
+% H3:
+Der dadurch entstandene Bias des Standardfehlers kann zu fehlerhaften Interpretationen und Schlussfolgerungen des $p-$Wertes der Moderation führen \parencite{Voraussetzung_Moderation}.
 
-\section{Bewertung der Methode}
-Möglische Kritikpunkte der durchgeführten Studie    \label{sec_5.3}
-soziale Erwünschtheit: durch Reihenfolge der Fragebögen
+\section{Bewertung der Methode}   \label{sec_5.3}
+Dieses Unterkapitel betrachtet die verwendete Methode genauer. Es werden sowohl die Stärken, wie auch ihre Schwächen aufgewiesen.
+Durch die erreichte Stichprobe von $N$~=~432 konnte die zuvor berechnete Mindeststichprobe von 395 Probanden erreicht werden. Dies ist ein Argument für eine valide Erhebung. 
+
+Der Einsatz von Manipulationschecks zur Überprüfung der Verständlichkeit und bewusste Wahrnehmung der dargebotenen Fallvignetten, trägt ebenfalls zu einer validen Untersuchung bei. Die Überprüfung des sozioökonomischen Status der Personen innerhalb der Fallvignetten kann zu Verwirrungen geführt haben, da gegebenenfalls von einem gemeinsamen sozioökonomischen Status des Paares ausgegangen wurde.
+
+Der verwendete Aggressionsfragebogen, wie auch der Fragebogen zur Erfassung der Akzeptanz von Mythen häuslicher Gewalt zeigen beide eine hohe Reliabilität und Validität auf \parencite{Peters2003, Aggressionsfragebogen}. Der Aggressionsfragebogen, wie auch der deutsche DVMAS eigneten sich gut für die Erhebung der Variablen Aggression und Akzeptanz von Gewaltmythen. 
+Die Entscheidung die Fallvignetten zu Beginn zu präsentieren, diente der unvoreingenommenen Verantwortungszuschreibung seitens der Probanden. Diese präventive Maßnahme birgt jedoch auch Nachteile. Durch die festgelegten Reiehendolge, kann dies durch mögliche soziale Erwünschtheit zu Verzerrungen des Antwortverhaltens bei den Fragebögen geführt haben. Ebenfalls die Erhebung der, in den Fallvignetten befindlichen Variablen verleif nicht optimal. Jeder Proband erhielt ein psychisches und ein sexualisiertes Szenario. Die übrigen drei Variablen wurden randomisiert zugeteilt. Dies führte dazu, dass den Probanden gegebenenfalls die selbe Variable dargeboten wurde, nur ein Mal im sexualisierten und ein Mal im physischen Setting. 
+
+Durch das Onlinemedium konnte kein Einfluss auf Störvariablen erfolgen. Es war den Teilnehmern selbst überlassen unter welchen Bedingungen sie an der Studie teilnehmen. Durch die abschließende Nachfrage der sinngemäßen Bearbeitung kann davon ausgegangen werden, dass es keine zu großen Störvariablen bei der Durchführung gab. Durch einen fehlenden Versuchsleiter entfielen dessen Effekte, wie zum Beispiel, dass sich ein Proband dadruch beobachtet fühlen kann. Dies führt zu objektiveren Datenerhebungen. Dennoch konnte keine aktive Kontrolle der Störvariablen erfolgen.
+
+Zusammenfassend kann man die Ergebung der Daten durch die standardisierten Fragebögen und durch die Manipulationschecks als valide einstufen. Dennoch sollte bei einer erneuten Untersuchung auf eine verbesserte Randomisierung der Variablen, innerhalb der Fallvignetten, wie auch der Fragebögen geachtet werde. 
 
 
 \section{Ausblick}
 Theoretische und/ oder praktische Implikationen     \label{sec_5.4}
+Fragebogen validieren
+viel mehr infos und weiterbildung muss sein
+Alt mit Jung vergleichen, weil hauptsächlich Jung kann auch verzerren
+komplette randomisierung: Variablen Vignetten und FB Reiehendolge
