--- a/Quellen.bib
+++ b/Quellen.bib
@@ -627,3 +627,27 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   edition        = {2},
   year           = {2018}
 }
+
+@phdthesis{Vergewaltigung_Boris_2004,
+  author      = {Brosi, N.},
+  school      = {Ludwig-Maximilians-Universität München},
+  title       = {Untersuchung zur Akzeptanz von Vergewaltigungsmythen in verschiedenen Bevölkerungsgruppen},
+  year        = {2004}
+}
+
+@phdthesis{Vergewaltigung_Bohner_1996,
+  author      = {Bohner, G.},
+  school      = {Universität Mannheim},
+  title       = {Vergewaltigungsmythen: Sozialpsychologische Untersuchungen über täterentlastende und opferfeindliche Überzeugungen im Bereich sexueller Gewalt},
+  year        = {1996}
+}
+
+@inbook{Vergewaltigung_Typen_Burt_1991,
+  author         = {Burt, M. R.},
+  chapter        = {Rape myths and acquaintance rape},
+  editor         = {Parrot, A.and Bechhofer, L.},
+  pages          = {26-40},
+  publisher      = {New York: John Wiley and Sons},
+  title          = {Acquaintance Rape: The Hidden Crime},
+  year           = {1991}
+}
