--- a/4 Ergebnisse/Tabelle Explorativ t-Test AggroFB-kult.tex
+++ b/4 Ergebnisse/Tabelle Explorativ t-Test AggroFB-kult.tex
@@ -15,7 +15,7 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864; DVMAS = Akzeptanz der Gewaltmythen; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}) Variable DVMAS 1 (Verantwortungszuschreibung gegenüber des Täters) bis 101 (Verantwortungszuschreibung gegenüber des Opfers); Spearman$-$Rang$-$Korrelation. \\ *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; DVMAS = Akzeptanz der Gewaltmythen; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}) Variable DVMAS 1 (Verantwortungszuschreibung gegenüber des Täters) bis 101 (Verantwortungszuschreibung gegenüber des Opfers); Spearman$-$Rang$-$Korrelation. \\ *$p<$~.001
       \end{tablenotes}
     \end{table}
 
