--- a/4 Ergebnisse/Tabelle H1 Spearman.tex
+++ b/4 Ergebnisse/Tabelle H1 Spearman.tex
@@ -8,14 +8,14 @@
       \hline
         & $M$   & $SD$ & 1 \\
       \hline
-    Aggression      & 1.88  & 0.43   & $-$      \\
-    victim blaming  & 26.46 & 27.98  & .064      \\
+    1 Aggression      & 1.88  & 0.43   & $-$      \\
+    2 victim blaming  & 26.46 & 27.98  & .18      \\
        \hline
     \end{tabular}
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N \) = 864; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Pearson$-$Produkt$-$Moment$-$Korrelation.
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Spearman$-$Rang$-$Korrelation.
       \end{tablenotes}
     \end{table}
 
