--- a/Abstract.tex
+++ b/Abstract.tex
@@ -7,9 +7,7 @@
 
 %%%%%%%%% START ABSTRACT %%%%%%%%%
 
-  \noindent Diese Arbeit beinhaltet eine LaTeX Vorlage für die Fakultät für Angewandte
-  Psychologie der SRH Hochschule Heidelber. Es umfasst sowohl eine Gliederung 
-  für eine übliche Arbeit als auch kommentierte Beispiele und generelle Regeln.
+  \noindent Diese Arbeit beinhaltet eine LaTeX Vorlage für die Fakultät für Angewandte Psychologie der SRH Hochschule Heidelber. Es umfasst sowohl eine Gliederung für eine übliche Arbeit als auch kommentierte Beispiele und generelle Regeln.
   
 %%%%%%%%%% END ABSTRACT %%%%%%%%%%
 
